--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,12 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">OMG! you will not belive me but...!</h1>
       <img src="./assets/img/rigo-baby.jpg" />
-      <p  id="excuse" class="alert alert-warning mt-4">
+
+      <p 
+        id="excuse" class="alert alert-warning mt-4">
         my dog ate my home work!
       </p>
+
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
